responsive design tablet&desktop

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
           placeholder="Email address"
         />
         <p class="error" id="error"></p>
-        <input type="submit" value="Request access" id="submit" />
+        <input type="submit" value="Request Access" id="submit" />
       </form>
     </main>
+    <img src="assets/desktop/bg-pattern-dots.svg" alt="dots" class="dots" />
   </body>
 </html>
