last design changes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p class="error" id="error"></p>
       </form>
     </main>
-    <img src="assets/desktop/bg-pattern-dots.svg" alt="dots" class="dots" />
+    <!-- <img src="assets/desktop/bg-pattern-dots.svg" alt="dots" class="dots" /> -->
   </body>
   <script src="app.js"></script>
 </html>
